5 June 2004 Sylvain Pion
- Remove warning.

5 June 2004 Sylvain Pion
- Remove obsolete test/install_ii and test/keep_ii.

25 March 2004 Radu Ursu
- removed all files in doc_tex because they are obsolete

09 Mar 2004  Andreas Fabri
- Replaced operator*(Vector,Vector), and operator*(Vector,NT) with functors

25 Feb 2004  Sylvain Pion
- parallel(x,x,k) is now in CGALi::.

1 Feb 2004  Sylvain Pion
- Remove "extern"

2.18 (2 December 2003)
- Use the documented parallel().

============================ CGAL 3.0 ===================================

2.17 (21 October 2003)
- fix headers

2.16 (7 October 2003) [af]
- Added '&' to parameters

2.15 (15 September 2003)
* Added missing 'return'

2.14 (10 September 2003)
* Added specializations for Cartesian and homogeneous kernels

2.11 (7 September 2003)
* bug fixes

2.10 (4 September 2003)
* Removed CGAL_WRAPs in squared_distance_utils.h
* More bug fixes

2.9 (12 August 2003)
* Even more bugfixes.

2.8 (7 August 2003)
* Bug fixes after the first step ==:>-

2.7 (7 August 2003)
A first step towards the extendible Kernel:

* All functionality is moved into namespace CGALi, in namespace CGAL
  there remain forward functions for the geometric types from the CGAL
  kernel thereby fully maintaining backwards compatibility; nothing
  changes on the user level.

* In the CGALi part, all types are referred to as K::Type rather than
  Type<K>.

* In the CGALi part, all functions have a kernel object as last
  argument, not only to ease the matching (no explicit template
  argument needed), but also to be able to handle kernels with state.

2.6 (4 April 2003)
- reflected the changes of 2.5.7 in web directory

2.5.7 (25 February 2003)
- Generalize wmult() to work with Filtered_kernel<> and more.

2.5.5 (30 October 2002)
- fixed one thing in .fw file that was only altered in generated file

2.5.4 (29 October 2002)
- rename leftturn and co to left_turn and co.
- make it work with GMP++.

2.5.3 (17 January 2002)